compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__consts__const_generalise.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/consts.rs
assertion_line: 53
expression: "\nfn identity(a: a) -> a {\na\n}\n\nconst id  = identity\n\npub fn main(){\n  let num  = id(1)\n  let word = id(\"Word\")\n}"
snapshot_kind: text
---
----- SOURCE CODE

fn identity(a: a) -> a {
a
}

const id  = identity

pub fn main(){
  let num  = id(1)
  let word = id("Word")
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec identity(I) -> I.
identity(A) ->
    A.

-file("project/test/my/mod.gleam", 8).
-spec main() -> binary().
main() ->
    Num = identity(1),
    Word = identity(<<"Word"/utf8>>).
