compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__consts__pub_const_equal_to_record_with_nested_private_function_field.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/consts.rs
assertion_line: 100
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub type Mapper(b) {\n            Mapper(fn(b) -> b)\n          }\n\n          pub type Funcs(b) {\n            Funcs(mapper: Mapper(b))\n          }\n\n          pub const id_mapper = Funcs(Mapper(identity))\n        "
snapshot_kind: text
---
----- SOURCE CODE

          fn identity(a) {
            a
          }

          pub type Mapper(b) {
            Mapper(fn(b) -> b)
          }

          pub type Funcs(b) {
            Funcs(mapper: Mapper(b))
          }

          pub const id_mapper = Funcs(Mapper(identity))
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([identity/1]).
-export_type([mapper/1, funcs/1]).

-type mapper(I) :: {mapper, fun((I) -> I)}.

-type funcs(J) :: {funcs, mapper(J)}.

-file("project/test/my/mod.gleam", 2).
-spec identity(K) -> K.
identity(A) ->
    A.
