compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__consts__record_constructor.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/consts.rs
assertion_line: 6
expression: "\npub type X {\n  X(Int)\n}\n\npub const z = X\n\npub fn main() {\n  z\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub type X {
  X(Int)
}

pub const z = X

pub fn main() {
  z
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([x/0]).

-type x() :: {x, integer()}.

-file("project/test/my/mod.gleam", 8).
-spec main() -> fun((integer()) -> x()).
main() ->
    fun(Field@0) -> {x, Field@0} end.
