compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__consts__use_private_in_tuple.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/consts.rs
assertion_line: 199
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub const funcs = #(identity)\n        "
snapshot_kind: text
---
----- SOURCE CODE

          fn identity(a) {
            a
          }

          pub const funcs = #(identity)
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([identity/1]).

-file("project/test/my/mod.gleam", 2).
-spec identity(I) -> I.
identity(A) ->
    A.
