compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__consts__use_qualified_pub_const_equal_to_record_with_private_function_field.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/consts.rs
assertion_line: 151
expression: "\n              fn identity(a) {\n                a\n              }\n\n              pub type Mapper(b) {\n                Mapper(fn(b) -> b)\n              }\n\n              pub const id_mapper = Mapper(identity)\n        "
snapshot_kind: text
---
----- SOURCE CODE

              fn identity(a) {
                a
              }

              pub type Mapper(b) {
                Mapper(fn(b) -> b)
              }

              pub const id_mapper = Mapper(identity)
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([identity/1]).
-export_type([mapper/1]).

-type mapper(I) :: {mapper, fun((I) -> I)}.

-file("project/test/my/mod.gleam", 2).
-spec identity(J) -> J.
identity(A) ->
    A.
