compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__consts__use_unqualified_pub_const_equal_to_private_function.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/consts.rs
assertion_line: 121
expression: "\n              fn identity(a) {\n                a\n              }\n\n              pub const id = identity\n        "
snapshot_kind: text
---
----- SOURCE CODE

              fn identity(a) {
                a
              }

              pub const id = identity
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([identity/1]).

-file("project/test/my/mod.gleam", 2).
-spec identity(I) -> I.
identity(A) ->
    A.
